lab/argocd/app-pihole-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: pihole-dnstcp
  namespace: pihole
spec:
  entryPoints:
    - dnstcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: pihole-dns-tcp
          port: 53
